# adaptive-crag

./: .env.example  .gitignore  MODULARIZATION_GUIDE.md  PROJECT_AUDIT.md  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml  start.bat
.cursor/rules/: teacher-mode.mdc  user-profile.mdc
adaptive_crag/agents/: analyzer_agent.py  base_agent.py  grader_agent.py  prompts.py  repair_agent.py  report_agent.py  router_agent.py  types.py  validator_agent.py
adaptive_crag/application/: session_manager.py  task_orchestrator.py
adaptive_crag/config/: settings.py
adaptive_crag/evaluation/: __init__.py  comparators.py  runner.py  sample_questions.py  scorers.py  test_suite.py
app/: main.py
app/views/: task_page.py  (+3 more)
specs/: 01_schema.md  02_config.md  03_ingestion.md  04_retrieval.md  05_tools.md  06_sandbox.md  07_application.md  08_graph.md  09_agents.md  10_reporting.md  11_ui.md  12_evaluation.md  README.md  main.py  pyproject.toml
specs/adaptive_crag/agents/: __init__.py  analyzer_agent.py  base_agent.py  grader_agent.py  prompts.py  repair_agent.py  report_agent.py  router_agent.py  validator_agent.py
specs/adaptive_crag/application/: __init__.py  artifact_manager.py  session_manager.py  task_orchestrator.py
specs/adaptive_crag/config/: __init__.py  llm_config.py  settings.py
specs/adaptive_crag/evaluation/: runner.py  sample_questions.py  scorers.py
specs/adaptive_crag/graph/: conditions.py  state.py  workflow.py
specs/adaptive_crag/graph/nodes/: __init__.py  analyze_node.py  code_write_node.py  execute_node.py  grade_node.py  repair_node.py  report_node.py  retrieve_node.py  route_node.py  validate_node.py  web_search_node.py
specs/adaptive_crag/ingestion/: __init__.py  chunker.py  dataset_profiler.py  document_loader.py
specs/adaptive_crag/reporting/: __init__.py  citation_checker.py  markdown_builder.py  report_builder.py
specs/adaptive_crag/retrieval/: bm25_store.py  embedding_store.py  evidence_builder.py  hybrid_retriever.py  reranker.py
specs/adaptive_crag/sandbox/: __init__.py  runner.py  security.py
specs/adaptive_crag/schema/: __init__.py  documents.py  evaluation.py  retrieval.py  workflow.py
specs/adaptive_crag/tools/: artifact_reader.py  bm25_search.py  citation_lookup.py  hybrid_search.py  sandbox_executor.py  vector_search.py  web_search.py
specs/app/: __init__.py  main.py
specs/app/pages/: __init__.py  benchmark_page.py  report_page.py  task_page.py  upload_page.py
specs/tests/: 01_test_schema.md  02_test_config.md  03_test_ingestion.md  04_test_retrieval.md  05_test_tools.md  06_test_sandbox.md  07_test_application.md  08_test_graph.md  09_test_agents.md  10_test_reporting.md  test_all.py
tests/: smoke_test.py  test_all.py
(+41 files in other folders)
