[project]
name = "adaptive_crag"
version = "0.1.0"
description = "自适应修正型检索增强生成系统 — 基于 LangGraph + ChromaDB + LLM 的文献分析与报告生成平台"
requires-python = ">=3.11"
authors = [
    {name = "Adaptive CRAG Team"},
]

dependencies = [
    "streamlit>=1.38,<1.40",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "tqdm>=4.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
]
eval = [
    "tqdm>=4.0",
]
pdf = [
    "fpdf2>=2.7.0",
]
all = [
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.0",
    "fpdf2>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/example/adaptive_crag"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["adaptive_crag*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
