[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "adaptive-crag"
version = "0.1.0"
description = "自适应修正型检索增强生成系统 (Adaptive Corrective RAG)"
authors = [
    {name = "Adaptive CRAG Team"},
]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "langgraph>=0.0.30",
    "langchain-core>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.0",
    "streamlit>=1.28.0",
    "PyMuPDF>=1.23.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
eval = [
    "tqdm>=4.0",
    "statsmodels>=0.14.0",
]
pdf = [
    "weasyprint>=60.0",
]

[project.urls]
Repository = "https://github.com/example/adaptive-crag"
Documentation = "https://adaptive-crag.readthedocs.io"

[tool.setuptools.packages.find]
include = ["adaptive_crag*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
